2011-08-08  Vadim Kurland  <vadim@netcitadel.com>

	* configlets/freebsd/rc_conf_carp_interface: see #2636 "carp :
	Incorrect output in rc.conf.local format". Should use
	create_args_carp0 instead of ifconfig_carp0 to set up CARP
	interface vhid, pass and adskew parameters.

2011-08-05  Vadim Kurland  <vadim@netcitadel.com>

	* RuleElement.cpp (RuleElementItf::validateChild): see #2635
	Object type AttachedNetworks is not allowed in the "interface"
	rule element.

2011-08-03  Vadim Kurland  <vadim@netcitadel.com>

	* newFirewallDialog_from_template.cpp (replaceReferencesToObject):
	see #2628 fixed crash that happened if user create new firewall
	object from a template and changed one of the ip addresses, while
	another firewall object created from the same template already
	existed in the tree.

2011-08-02  Vadim Kurland  <vadim@netcitadel.com>

	* instDialog_ui_ops.cpp (instDialog::getInstOptions): moved "batch
	install" button from the main installer wizard to the dialog where
	user enters their password. Now user can start in a non-batch
	install mode but continue in batch install mode at any time if all
	their firewalls authenticate with the same user name and password.

2011-08-01  Vadim Kurland  <vadim@netcitadel.com>

	* pix.g (static_command_common_last_parameters): changed token
	name from "ESP" to "ESP_WORD" to avoid conflict with macro "ESP"
	that happened during build on OpenSolaris

	* unit_tests/ObjectMatcherTest/ObjectMatcherTest.cpp (matchTest):
	fixed unit test (ObjectMatcher matches ipv6 only when internal
	flag is set accordingly)

	* VERSION: set version to 5.0.1

2011-07-28  vadim  <vadim@netcitadel.com>

	* version 5.0.0. release

2011-07-22  vadim  <vadim@netcitadel.com>

	* ObjectManipulator.h (QWidget): see #2622 "Remove Back and
	Forward buttons". We have decided behavior of the GUI was too
	complicated since user can both act on objects directly and
	navigate backwards and forwards to the objects found in their